<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_ros2_init</name>
  <version>0.0.0</version>
  <description>PX4 ROS 2 Initialization, Control, and Visualization Environment</description>  <maintainer email="deadnote@todo.todo">deadnote</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <exec_depend>launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
